@@ -8,6 +8,8 @@
 	Update .spec for Postfix (Nerijus Baliunas)
 	Optionnaly post the message body to an URL check at DATA stage
 	Integrate SPF, SMTP AUTH and STARTTLS in ACL
+	Add msgsize and rcptcount clauses to ACL
+	Allow rcpt clause at DATA stage ACL
 3.1.3
 	Fix various bugs (regex searches, lists matches, uninitialized memory)
 3.1.2
